Fix the navbar button alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,3 @@
 /* CSS definition file containing sitestyle stylesheets */
-BODY { background-image: url("images/Gray1_copy.gif");}
- 
+body { background-image: url("images/Gray1_copy.gif");}
+td a img { margin-bottom: -5px; } 
